--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Assignment10Final</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+    <string name="title_activity_cloud_detail">CloudDetailActivity</string>
+    <string name="how_to">How to</string>
+    <string name="delete_sighting">Delete Sighting</string>
 </resources>
