--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,10 +6,12 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_cloud_detail">CloudDetailActivity</string>
     <string name="how_to">How to</string>
-    <string name="delete_sighting">Delete Sighting</string>
+    <string name="delete_sighting">Delete Selected Sightings</string>
     <string name="fetching_conditions">Fetching Current Conditions</string>
     <string name="menu_new_sighting">Add</string>
-    <string name="sighting_desc_hint">Would you like to enter any other information about this cloud?</string>
+    <string name="sighting_desc_hint">Enter a description for this cloud</string>
 	<string name="change_cloud_image">Take a new photo for this cloud</string>
 	<string name="cloud_image">Cloud Photo</string>    
+	<string name="show_on_map">Show On Map</string>
+	
 </resources>
