--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,8 +10,9 @@
     <string name="fetching_conditions">Fetching Current Conditions</string>
     <string name="menu_new_sighting">Add</string>
     <string name="sighting_desc_hint">Enter a description for this cloud</string>
-	<string name="change_cloud_image">Take a new photo for this cloud</string>
-	<string name="cloud_image">Cloud Photo</string>    
-	<string name="show_on_map">Show On Map</string>
-	
+    <string name="change_cloud_image">Take a new photo for this cloud</string>
+    <string name="cloud_image">Cloud Photo</string>
+    <string name="show_on_map">Show On Map</string>
+    <string name="title_activity_camera">CameraActivity</string>
+	<string name="take_photo">Take Photo</string>
 </resources>
